--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,13 @@ services:
       - POSTGRES_DB=dev
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
+
+  redis:
+    image: redis:2.8
+    ports:
+      - "6379:6379"
+
+  rabbitmq:
+    image: rabbitmq:3.6.5
+    ports:
+      - "5672:5672"
